fix: align header left

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -29,6 +29,12 @@ body {
   padding: 30px;
 }
 
+.App-header-inner {
+  display: flex;
+  max-width: 960px;
+  margin: auto;
+}
+
 .App-sliders {
   align-items: center;
   color: #fff;
